<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".com.example.first_assignment.">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue_grey_300">

        <TextView
            android:id="@+id/title_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_for_record"
            android:text="@string/date_title" />

        <TextView
            android:id="@+id/title_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_for_record"
            android:text="@string/time_title" />

        <TextView
            android:id="@+id/title_points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_for_record"
            android:gravity="end"
            android:text="@string/records_list_title" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ListView
        android:id="@+id/records_list_view"
        android:layout_below="@id/top_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:padding="8dp"
        tools:listitem="@layout/record_item" />
</RelativeLayout>
